<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bgbutton"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:textSize="30sp"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
         android:text="@string/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/edtUsername"
         android:hint="@string/inputusername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="@string/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/inputpass"
                    android:inputType="textPassword"
                    android:id="@+id/edtpassword"

                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button

        android:id="@+id/simpan"
    android:text="@string/btnsmpn"
    android:layout_width="100dp"
    android:layout_height="wrap_content" />
    <Button
        android:layout_margin="5dp"

        android:id="@+id/cancel"
        android:text="@string/btncancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>